GearsetPOC/force-app/main/default/objects/Business_Account__c/Business_Account__c.object-meta.xml
<CustomObject>
    <description>Custom Business Account object created as part of Eurostar Delta migration project. Eurostar Jira ref DEIS-281</description>
    <label>Business Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>