GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <label>Account Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Revenue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
            <value>
                <fullName>Level 6</fullName>
            </value>
            <value>
                <fullName>Level 7</fullName>
            </value>
            <value>
                <fullName>Level 8</fullName>
            </value>
            <value>
                <fullName>Level 9</fullName>
            </value>
            <value>
                <fullName>Level 10</fullName>
            </value>
            <value>
                <fullName>Level 11</fullName>
            </value>
            <value>
                <fullName>Level 12</fullName>
            </value>
            <value>
                <fullName>Level 13</fullName>
            </value>
            <value>
                <fullName>Level 14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>