GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Account_PCC__c.field-meta.xml
<CustomField>
    <fullName>Account_PCC__c</fullName>
    <label># Account PCC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>