GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Agency_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Account 1</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Business Accounts (Agency Account 1)</relationshipLabel>
    <relationshipName>Agency_Account_1</relationshipName>
    <type>Lookup</type>
</CustomField>