GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Agency_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Account 2</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Business Accounts (Agency Account 2)</relationshipLabel>
    <relationshipName>Agency_Account_2</relationshipName>
    <type>Lookup</type>
</CustomField>