GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Agency_Account_3__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Account 3</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Business Accounts (Agency Account 3)</relationshipLabel>
    <relationshipName>Agency_Account_3</relationshipName>
    <type>Lookup</type>
</CustomField>