GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Accounts (Agency Contact)</relationshipLabel>
    <relationshipName>Agency_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>