GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Annual_Review_Reneg__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Reneg__c</fullName>
    <description>date of annual review before contract expires</description>
    <label>Annual Review / Renegotiation</label>
    <type>Date</type>
</CustomField>