GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/API_Technical_Support__c.field-meta.xml
<CustomField>
    <fullName>API_Technical_Support__c</fullName>
    <label>API Technical Support Email</label>
    <type>Email</type>
</CustomField>