GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Auto_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number_3__c</fullName>
    <description>Used for Account number creation TO, DC, LA, GDS and GDS &amp; BAF</description>
    <inlineHelpText>Used for Account number creation TO, DC, LA, GDS and GDS &amp; BAF</inlineHelpText>
    <label>Auto Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>