GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/B2b_Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>B2b_Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N° booking SNCB</fullName>
            </value>
            <value>
                <fullName>N° booking NS</fullName>
            </value>
            <value>
                <fullName>N° booking DB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>