GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <label>Office Location Postcode</label>
    <length>120</length>
    <type>Text</type>
</CustomField>