GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <label>Office Location State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>