GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Blue_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Blue_Account_Type__c</fullName>
    <description>Used to classify the agents based on the Red corporate framework. Each level of classification gives various benefits</description>
    <label>Blue Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>