GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Booking_Code__c.field-meta.xml
<CustomField>
    <fullName>Booking_Code__c</fullName>
    <label>Booking Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCE</fullName>
            </value>
            <value>
                <fullName>GND Belgium London</fullName>
            </value>
            <value>
                <fullName>GND Belgium Continent</fullName>
            </value>
            <value>
                <fullName>GND The Netherlands London</fullName>
            </value>
            <value>
                <fullName>GND The Netherlands Continent</fullName>
            </value>
            <value>
                <fullName>Corporate Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>