GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Corporate Tracking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public booking (no points used)</fullName>
            </value>
            <value>
                <fullName>Points Booking (core/direct)</fullName>
            </value>
            <value>
                <fullName>Indirect route with points</fullName>
            </value>
            <value>
                <fullName>Non Eurostar with points</fullName>
            </value>
            <value>
                <fullName>Wheelchair traveller with or without Companion</fullName>
            </value>
            <value>
                <fullName>Standalone companion</fullName>
            </value>
            <value>
                <fullName>Assisted traveller with companion</fullName>
            </value>
            <value>
                <fullName>Assisted traveller with Guide dog</fullName>
            </value>
            <value>
                <fullName>Standalone guide dog</fullName>
            </value>
            <value>
                <fullName>Musical Instrument</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>