GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Business_Account_Name_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Name_TEXT__c</fullName>
    <label>Business Account Name TEXT</label>
    <type>TextArea</type>
</CustomField>