GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/BusinessID_B__c.field-meta.xml
<CustomField>
    <fullName>BusinessID_B__c</fullName>
    <description>Unique E4B Business Id</description>
    <externalId>true</externalId>
    <label>Business Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>