GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stations</fullName>
            </value>
            <value>
                <fullName>Agencies and Corporate</fullName>
            </value>
            <value>
                <fullName>Distributor Websites</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Rail Europe</fullName>
            </value>
            <value>
                <fullName>Contract Management</fullName>
            </value>
            <value>
                <fullName>Other Distributors</fullName>
            </value>
            <value>
                <fullName>Data Disribution System &amp; Assistance</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>