GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Company_Name_B__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_B__c</fullName>
    <label>Company Registered Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>