GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Range of number of employees</description>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-9 Employees</fullName>
            </value>
            <value>
                <fullName>10-49 Employees</fullName>
            </value>
            <value>
                <fullName>50-249 Employees</fullName>
            </value>
            <value>
                <fullName>250 -…Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>