GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Contact_Email_CCR__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_CCR__c</fullName>
    <description>based on CCR - auto populate from CCR</description>
    <formula>Main_Contact__r.Customer_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>