GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Contact_Mobile_CCR__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_CCR__c</fullName>
    <description>based on CCR - auto populate from CCR</description>
    <formula>Main_Contact__r.Primary_Phone_Number_Main_Contact__c</formula>
    <label>Contact Mobile</label>
    <type>Text</type>
</CustomField>