GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Contact_Phone_CCR__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_CCR__c</fullName>
    <description>based on CCR - auto populate from CCR</description>
    <formula>Main_Contact__r.Home_Phone_Main_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>