GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMC Pan European</fullName>
            </value>
            <value>
                <fullName>Internal BAF</fullName>
            </value>
            <value>
                <fullName>Reward Redemption</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>UK Distributor</fullName>
            </value>
            <value>
                <fullName>Non-UK Distributor</fullName>
            </value>
            <value>
                <fullName>IATA Ticketing Authority</fullName>
                <isActive>false</isActive>
                <label>IATA Ticketing Authority</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>