GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Contracting_Language__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Language__c</fullName>
    <description>Language that Contracts should be in</description>
    <label>Contracting Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>