GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Corp_Account_PCC_Codes__c.field-meta.xml
<CustomField>
    <fullName>Corp_Account_PCC_Codes__c</fullName>
    <label># Corp Account PCC Codes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>