GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Corporate_Client_Rep__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Client_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main contact for the corporate account (travel manager)</description>
    <label>CCR (Corporate Client Representative)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Accounts</relationshipLabel>
    <relationshipName>Business_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>