GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code__c</fullName>
    <label>Corporate Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>