GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Corporate_Code_Active__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Code Active</label>
    <type>Checkbox</type>
</CustomField>