GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Current_User_is_Manager_of_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Manager_of_Owner__c</fullName>
    <formula>$User.Id =  Owner:User.ManagerId || $User.Id =  Secondary_Account_Owner__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Manager</label>
    <type>Checkbox</type>
</CustomField>