GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Accounts (Customer)</relationshipLabel>
    <relationshipName>Business_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>