GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Disruption_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Disruption_2_Email__c</fullName>
    <label>2nd Disruption Email</label>
    <type>Email</type>
</CustomField>