GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/E4B_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>E4B_Registration_Date__c</fullName>
    <description>Date an E4B account is registered.</description>
    <label>E4B Registration Date</label>
    <type>Date</type>
</CustomField>