GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Fare_Range__c.field-meta.xml
<CustomField>
    <fullName>Fare_Range__c</fullName>
    <label>Fare Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>RIT</fullName>
            </value>
            <value>
                <fullName>Allotment</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Concession Fares</fullName>
            </value>
            <value>
                <fullName>FIP</fullName>
            </value>
            <value>
                <fullName>Seat reservation only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>