GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/FCE_Continent__c.field-meta.xml
<CustomField>
    <fullName>FCE_Continent__c</fullName>
    <label>FCE Continent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>