GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/FCE_London__c.field-meta.xml
<CustomField>
    <fullName>FCE_London__c</fullName>
    <label>FCE London</label>
    <length>200</length>
    <type>Text</type>
</CustomField>