GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/FCE_London_Active__c.field-meta.xml
<CustomField>
    <fullName>FCE_London_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FCE London Active</label>
    <type>Checkbox</type>
</CustomField>