GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/First_Class_Share__c.field-meta.xml
<CustomField>
    <fullName>First_Class_Share__c</fullName>
    <label>First Class Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0% - 10%</fullName>
            </value>
            <value>
                <fullName>10% - 25%</fullName>
            </value>
            <value>
                <fullName>25% - ⁠35%</fullName>
            </value>
            <value>
                <fullName>⁠35% - 45%</fullName>
            </value>
            <value>
                <fullName>⁠45% - 55%</fullName>
            </value>
            <value>
                <fullName>⁠55% - 65%</fullName>
            </value>
            <value>
                <fullName>⁠65% - 75%</fullName>
            </value>
            <value>
                <fullName>⁠75% - ⁠90%</fullName>
            </value>
            <value>
                <fullName>90% - 100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>