GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/GDS_Code__c.field-meta.xml
<CustomField>
    <fullName>GDS_Code__c</fullName>
    <label>GDS Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>