GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/GDS_Code_Active__c.field-meta.xml
<CustomField>
    <fullName>GDS_Code_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDS Code Active</label>
    <type>Checkbox</type>
</CustomField>