GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Gifts__c.field-meta.xml
<CustomField>
    <fullName>Gifts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allowed to receive gifts</inlineHelpText>
    <label>Gifts</label>
    <type>Checkbox</type>
</CustomField>