GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/GND_BE_Continent_Active__c.field-meta.xml
<CustomField>
    <fullName>GND_BE_Continent_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GND BE Continent Active</label>
    <type>Checkbox</type>
</CustomField>