GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/GND_BE_London__c.field-meta.xml
<CustomField>
    <fullName>GND_BE_London__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GND BE London</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Corp_Tracking_Type_and_Code__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>GND_Belgium_London</value>
        </filterItems>
        <filterItems>
            <field>Corp_Tracking_Type_and_Code__c.B2b_IsUsed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Corp_Tracking_Type_and_Code__c.B2b_Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Corp_Tracking_Type_and_Code__c</referenceTo>
    <relationshipLabel>Business Accounts (GND London Continent)</relationshipLabel>
    <relationshipName>Business_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>