GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/GND_NL_Continent__c.field-meta.xml
<CustomField>
    <fullName>GND_NL_Continent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GND NL Continent</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Corp_Tracking_Type_and_Code__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>GND_The_Netherlands_Continent</value>
        </filterItems>
        <filterItems>
            <field>Corp_Tracking_Type_and_Code__c.B2b_IsUsed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Corp_Tracking_Type_and_Code__c.B2b_Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Corp_Tracking_Type_and_Code__c</referenceTo>
    <relationshipLabel>Business Accounts (GND NL Continent)</relationshipLabel>
    <relationshipName>Business_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>