GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/GND_NL_London_Active__c.field-meta.xml
<CustomField>
    <fullName>GND_NL_London_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GND NL London Active</label>
    <type>Checkbox</type>
</CustomField>