GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <defaultValue>&quot;Main Account&quot;</defaultValue>
    <label>Hierarchy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Account</fullName>
                <default>true</default>
                <label>Main Account</label>
            </value>
            <value>
                <fullName>Branch Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>