GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Is_BusinessAccounts_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_BusinessAccounts_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is BusinessAccounts Duplicate</label>
    <type>Checkbox</type>
</CustomField>