GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Is_Continent_Duplicated__c.field-meta.xml
<CustomField>
    <fullName>Is_Continent_Duplicated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Continent Duplicated</label>
    <type>Checkbox</type>
</CustomField>