GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Is_London_Duplicated__c.field-meta.xml
<CustomField>
    <fullName>Is_London_Duplicated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is London Duplicated</label>
    <type>Checkbox</type>
</CustomField>